<resources>
    <string name="app_name">MuscleRent</string>
    <string name="add_reservation">+</string>
    <string name="date_label">Date :</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="hour_label">Hours :</string>
    <string name="beginning_label">Beginning :</string>
    <string name="beginning_hint">10h</string>
    <string name="end_hint">12h</string>
    <string name="end_label">End :</string>
    <string name="submit_button">Submit</string>
    <string name="empty_not_saved">Some fields were empty, reservation not saved.</string>
    <string name="salle_label">Salle :</string>
    <string name="salle_hint">Enter gym number here</string>
    <string name="reservation_information">Reservation Information</string>
    <string name="gym_name">Gym Name :</string>
    <string name="adress">Adress :</string>
    <string name="hours">Hours :</string>
    <string name="beginning">Beginning :</string>
    <string name="end">End :</string>
    <string name="gym_details">Gym details :</string>

    <string-array name="salle_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>